--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -21,6 +21,8 @@
       </ul>
     </div>
     <div>
+    <a href="{{ path('app_register')}}" class="btn btn-primary">Créé un compte
+    </a>
     <a href="{{ path('app_login')}}" class="btn btn-primary">Connexion
     </a>
     </div>
