add mail confirmation and reset password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,6 +41,7 @@
     <button class="btn btn-lg btn-primary mt-3" type="submit">
         Connexion
     </button>
+    <a href="{{ path('app_forgot_password_request')}}">Mots de passe oublié</a>
 </form>
      </div>
 </div>
