--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,6 +15,9 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.nickname, {
+            label: 'Pseudo'
+        }) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Mot de passe'
         }) }}
