Add AccountManagement and Private Fav Space

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -30,7 +30,7 @@
         </li>
         {% elseif is_granted('ROLE_USER') %}
         <li class="nav-item btn btn-primary mx-1">
-          <a class="nav-link text-white" aria-current="page" href="{{path('')}}">Mon Espace</a>
+          <a class="nav-link text-white" aria-current="page" href="{{path('app_fav_cards_private')}}">Mon Espace</a>
         </li>
         <li class="nav-item btn btn-primary mx-1">
           <a class="nav-link text-white" aria-current="page" href="{{path('app_account_index')}}">Mon Compte</a>
