--- a/templates/fav_cards_private/_form.html.twig
+++ b/templates/fav_cards_private/_form.html.twig
@@ -1,4 +1,12 @@
 {{ form_start(form) }}
+{{ form_row(form.title)}}
+ {{ form_row(form.description)}}
+ {{ form_row(form.link)}}
+ {{ form_row(form.Tag)}}
+ <div class="d-none">
+ {{ form_row(form.Author, {'value': app.user.id})}}
+ </div>
+
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
