--- a/templates/fav_cards_private/edit.html.twig
+++ b/templates/fav_cards_private/edit.html.twig
@@ -3,11 +3,23 @@
 {% block title %}Edit FavCardsPrivate{% endblock %}
 
 {% block body %}
+<div class="d-flex flex-column  flex-grow-1">
+                
+    <div class=" p-3 mx-3 my-auto align-self-center">
     <h1>Edit FavCardsPrivate</h1>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
     {{ include('fav_cards_private/_form.html.twig', {'button_label': 'Update'}) }}
+            
+            </div>
+        </div>
+    </div>
 
     <a href="{{ path('app_fav_cards_private_index') }}">back to list</a>
 
     {{ include('fav_cards_private/_delete_form.html.twig') }}
+
+    </div>
+</div>
 {% endblock %}
