--- a/templates/fav_cards_private/show.html.twig
+++ b/templates/fav_cards_private/show.html.twig
@@ -3,14 +3,14 @@
 {% block title %}FavCardsPrivate{% endblock %}
 
 {% block body %}
+<div class="d-flex flex-column  flex-grow-1">
+                
+    <div class=" p-3 mx-3 my-auto align-self-center">
     <h1>FavCardsPrivate</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ fav_cards_private.id }}</td>
-            </tr>
+            
             <tr>
                 <th>Title</th>
                 <td>{{ fav_cards_private.title }}</td>
@@ -23,10 +23,7 @@
                 <th>Link</th>
                 <td>{{ fav_cards_private.link }}</td>
             </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ fav_cards_private.status }}</td>
-            </tr>
+           
             <tr>
                 <th>Created_at</th>
                 <td>{{ fav_cards_private.createdAt ? fav_cards_private.createdAt|date('Y-m-d H:i:s') : '' }}</td>
@@ -43,4 +40,6 @@
     <a href="{{ path('app_fav_cards_private_edit', {'id': fav_cards_private.id}) }}">edit</a>
 
     {{ include('fav_cards_private/_delete_form.html.twig') }}
+    </div>
+</div>
 {% endblock %}
