add paginatore an search field

--- a/templates/fav_cards_private/_card.html.twig
+++ b/templates/fav_cards_private/_card.html.twig
@@ -9,7 +9,7 @@
   </div>
   <div class="m-1">
   {% for tag in card.Tag %}
-    <em class="text-muted text-italic m-1">#{{tag.tag}}</em>
+    <em class="text-muted text-italic m-1">#{{tag.name}}</em>
   {% endfor %}
   </div>
 </div>
