--- a/templates/fav_cards_private/new.html.twig
+++ b/templates/fav_cards_private/new.html.twig
@@ -14,3 +14,6 @@
     </div>
 </div>
 {% endblock %}
+{# {% block javascript %}
+    <script src="{{ asset('js/tags.js') }}"></script>
+{% endblock %} #}
