add dynamic search public card

--- a/templates/home/_sorting.html.twig
+++ b/templates/home/_sorting.html.twig
@@ -1,2 +1,3 @@
 
-{# {{ knp_pagination_sortable(dishes, 'Nom', 'favCardsPublic.title') }} #}
+{{ knp_pagination_sortable(favCardsPublic, 'Titre', 'favCardsPublic.title') }}
+{{ knp_pagination_sortable(favCardsPublic, 'Date', 'favCardsPublic.created_at') }}
