--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,7 @@
     <div class="d-flex justify-content-end m-2 js-filter-sorting">
         {% include 'home/_sorting.html.twig' %}
         </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4" data-masonry='{"percentPosition": true }'>
+    <div class="row row-cols-1 row-cols-md-3 g-4 js-filter-content" data-masonry='{"percentPosition": true }'>
     {% include 'home/_gallery.html.twig' %}
     </div>
     <div class="mt-4 js-filter-pagination">
