--- a/templates/fav_cards_private/_gallery.html.twig
+++ b/templates/fav_cards_private/_gallery.html.twig
@@ -1,3 +1,5 @@
-{% for card in cardsPrivate %}
+{% for card in favCardsPrivate %}
+
 {% include 'fav_cards_private/_card.html.twig' %}
+
 {% endfor %}
