--- a/templates/fav_cards_private/display.html.twig
+++ b/templates/fav_cards_private/display.html.twig
@@ -10,15 +10,26 @@
 <a class=" btn btn-primary text-white my-1 mx-3 align-self-center" aria-current="page" href="{{path('app_fav_cards_private_index')}}">Gerer mes cartes</a>
 </div>
 </div>
-<div class="d-flex flex-column justify-content-center align-items-center my-5 flex-grow-1 m-2">
-
-    <div class="container">
-    <div class="col">
-    <div class="row row-cols-1 row-cols-md-3 g-4" data-masonry='{"percentPosition": true }'>
+<div class="mx-3 d-flex flex-column  justify-content-center  flex-grow-1  js-filter">
+<div class="m-3 border-bottom">
+<h1 class=" my-3 mx-md-5 mx-auto">Favoris</h1>
+</div>
+    <div class="row">
+    <div class="col-md-2 ">
+            {% include 'fav_cards_private/_filter.html.twig' with {form : form} only %}
+        </div>
+    <div class="col-md-10">
+    <div class="d-flex justify-content-end m-2 js-filter-sorting">
+        {% include 'fav_cards_private/_sorting.html.twig' %}
+        </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4 js-filter-content" data-masonry='{"percentPosition": true }'>
     {% include 'fav_cards_private/_gallery.html.twig' %}
-    
     </div>
+    <div class="mt-4 js-filter-pagination">   
+                    {% include 'fav_cards_private/_pagination.html.twig' %}
+                </div>
     </div>
     </div>
 </div>
+
 {% endblock %}
